--- a/.github/workflows/reverse_rdp.yml
+++ b/.github/workflows/reverse_rdp.yml
@@ -6,6 +6,9 @@ on:
       authcode:
         description: 'Ngrog Token'
         required: true
+      loca:
+        description: 'ngrok region'
+        required: true
 jobs:
   build:
 
@@ -26,4 +29,4 @@ jobs:
     - run: Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -name "UserAuthentication" -Value 1
     - run: Set-LocalUser -Name "majhcc" -Password (ConvertTo-SecureString -AsPlainText "majhcc123" -Force)
     - name: Create Tunnel
-      run: .\ngrok\ngrok.exe tcp -region eu 3389
+      run: .\ngrok\ngrok.exe tcp -region ${{ github.event.inputs.loca }} 3389
