--- a/.github/workflows/reverse_rdp.yml
+++ b/.github/workflows/reverse_rdp.yml
@@ -27,6 +27,6 @@ jobs:
       run: Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server'-name "fDenyTSConnections" -Value 0
     - run: Enable-NetFirewallRule -DisplayGroup "Remote Desktop"
     - run: Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -name "UserAuthentication" -Value 1
-    - run: Set-LocalUser -Name "majhcc" -Password (ConvertTo-SecureString -AsPlainText "majhcc123" -Force)
+    - run: Set-LocalUser -Name "runneradmin" -Password (ConvertTo-SecureString -AsPlainText "P@ssw0rd!" -Force
     - name: Create Tunnel
       run: .\ngrok\ngrok.exe tcp -region ${{ github.event.inputs.loca }} 3389
