--- a/.github/workflows/reverse_rdp.yml
+++ b/.github/workflows/reverse_rdp.yml
@@ -7,14 +7,16 @@ on:
         description: 'Ngrog Token'
         required: true
       loca:
-        description: 'ngrok region'
         required: true
+        default: 'us'
 jobs:
   build:
 
     runs-on: windows-latest
 
     steps:
+    - name: Install megasync
+      run: choco install megasync
     - name: Download
       run: Invoke-WebRequest https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-windows-amd64.zip -OutFile ngrok.zip
     - name: Extract
