--- a/.github/workflows/reverse_rdp.yml
+++ b/.github/workflows/reverse_rdp.yml
@@ -15,8 +15,8 @@ jobs:
     runs-on: windows-latest
 
     steps:
-    - name: Install megasync
-      run: choco install megasync
+    - name: Install google backup and sync
+      run: choco install google-backup-and-sync
     - name: Download
       run: Invoke-WebRequest https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-windows-amd64.zip -OutFile ngrok.zip
     - name: Extract
