--- a/.github/workflows/reverse_rdp.yml
+++ b/.github/workflows/reverse_rdp.yml
@@ -7,6 +7,7 @@ on:
         description: 'Ngrog Token'
         required: true
       loca:
+        description: 'Ngrog region'
         required: true
         default: 'eu'
 jobs:
