--- a/.github/workflows/reverse_rdp.yml
+++ b/.github/workflows/reverse_rdp.yml
@@ -17,7 +17,7 @@ jobs:
 
     steps:
     - name: Install google backup and sync
-      run: choco install google-backup-and-sync
+      run: choco install google-backup-and-sync, warp, 
     - name: Download
       run: Invoke-WebRequest https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-windows-amd64.zip -OutFile ngrok.zip
     - name: Extract
