--- a/.github/workflows/reverse_rdp.yml
+++ b/.github/workflows/reverse_rdp.yml
@@ -16,8 +16,6 @@ jobs:
     runs-on: windows-latest
 
     steps:
-    - name: Install google backup and sync
-      run: choco install google-backup-and-sync, warp, 
     - name: Download
       run: Invoke-WebRequest https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-windows-amd64.zip -OutFile ngrok.zip
     - name: Extract
@@ -31,5 +29,9 @@ jobs:
     - run: Enable-NetFirewallRule -DisplayGroup "Remote Desktop"
     - run: Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -name "UserAuthentication" -Value 1
     - run: Set-LocalUser -Name "runneradmin" -Password (ConvertTo-SecureString -AsPlainText "P@ssw0rd!" -Force)
+    - name: Install google backup and sync
+      run: choco install google-backup-and-sync
+    - name: Install Warp
+      run: choco install warp
     - name: Create Tunnel
       run: .\ngrok\ngrok.exe tcp -region ${{ github.event.inputs.loca }} 3389
